--- a/assets/css/color/blue.css
+++ b/assets/css/color/blue.css
@@ -7,8 +7,8 @@
 @import '../variables.css';
 
 :root {
-  --accent: #23B0FF;
-  --background: color-mod(var(--accent) blend(#1D1E28 98%));
-  --color: white;
+  --accent: #3d8bd8;
+  --background: #101416;
+  --color: #dfe3e6;
   --border-color: rgba(255, 255, 255, .1);
 }
