--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
-  --accent: #FFA86A;
-  --background: color-mod(var(--accent) blend(#1D1E28 98%));
-  --color: white;
+  --accent: #ffe075;
+  --background: #101416;
+  --color: #dfe3e6;
   --border-color: rgba(255, 255, 255, .1);
 
   /* variables for js, must be the same as these in @custom-media queries */
